[metadata]
name = fastest_pkg
version = 0.2.3

author = Emanuel Haupt
author_email = ehaupt@FreeBSD.org
url = https://github.com/ehaupt/fastest_pkg
description = Script to find the fastest FreeBSD.org pkg mirror
long_description = file: README.md
long_description_content_type = text/markdown
keywords = FreeBSD, fastest pkg mirror
license = BSD 3-Clause License
classifiers =
    Programming Language :: Python :: 3
    Topic :: Utilities
    License :: OSI Approved :: BSD License

[options]
packages = find:
zip_safe = True
include_package_data = True
install_requires =
    dnspython
    pycurl

[options.entry_points]
console_scripts = 
    fastest_pkg = fastest_pkg.fastest_pkg:main
